# Milhouse-oss

./: .env.example  .gitignore  .gitleaksignore  .mcp.example.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  setup.sh
.agents/skills/: milhouse-compound  milhouse-feedback  milhouse-gate-review  milhouse-ops  milhouse-oss-maintainer
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  architecture.yml  ideas.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  docs_request.yml  feature_request.yml  integration_request.yml
.github/workflows/: ci.yml
config/: example.toml  license-policy.toml
config/examples/: ai-agent-workflows.toml  cloudflare-sites.toml  local-only.toml
docs/: agents-and-tools.md  architecture.md  dependencies.md  development.md  engineering-journal.md  feedback-loop.md  github-setup.md  implementation-plan.md  implementation-status.md  openwiki.md  oss-public-repo-plan.md  project-plan.md  provenance.md  publication-checklist.md  setup.md  skill-evaluations.md  threat-model.md
docs/adr/: 0001-product-scope-naming-and-license.md  0002-configuration-paths-and-secrets.md  0003-records-identity-and-metrics.md  0004-spool-sqlite-commit-and-recovery.md  0005-clickhouse-analytical-storage.md  0006-alert-incident-and-feedback-state.md  0007-privacy-identity-egress-and-retention.md  0008-trusted-plugin-boundary.md  0009-scheduler-process-and-service-model.md  0010-local-stdio-mcp.md  0011-authenticated-ingestion-receiver.md  0012-application-repository-boundary.md  0013-packaging-versioning-and-release.md  0014-support-governance-security-and-provenance.md  0015-agent-engineering-workflow.md  0016-local-structured-log-persistence.md  0017-d01-dco-historical-disposition.md  README.md
docs/engineering-journal/: 2026-07-22-foundations-before-features.md
docs/gate-evidence/: G01.md  G02.md  PR21-DCO.md  README.md
docs/solutions/: README.md
openwiki/: README.md
ops/clickhouse/: docker-compose.yml
scripts/: __init__.py  check_artifacts.py  check_coverage.py  check_dco.py  check_licenses.py  check_links.py  check_private_identifiers.py  gitleaks.py  prepare_environment.py  required_ci.py  run_make.py  run_uv.py  secret_scan.py  validate_config.py  validate_skills.py  validate_workflows.py
scripts/milhouse_tools/: __init__.py  strict_data.py
skills/milhouse-compound/: SKILL.md
skills/milhouse-feedback/: SKILL.md
skills/milhouse-gate-review/: SKILL.md
skills/milhouse-ops/: SKILL.md
skills/milhouse-oss-maintainer/: SKILL.md
src/milhouse/: __init__.py  __main__.py  cli.py
tests/: test_repo_scaffold.py
tests/contract/: test_config_examples.py  test_egress_matrix_contract.py  test_identity_portability_contract.py  test_plugin_allowlist_contract.py  test_record_envelope.py  test_resources_contract.py
tests/e2e/: test_module_entrypoint.py
tests/integration/: test_cli_config_integration.py  test_cli_plugin_validation_integration.py  test_cli_resource_integration.py  test_identity_subprocess_integration.py  test_log_wire_subprocess_integration.py
tests/migration/: test_resource_manifest_migration.py
tests/packaging/: test_package_resources.py
tests/property/: test_canonical_properties.py  test_clock_properties.py  test_config_path_secret_properties.py  test_config_plugin_properties.py  test_egress_policy_properties.py  test_log_wire_properties.py  test_privacy_properties.py  test_privacy_redaction_properties.py  test_pseudonym_key_properties.py  test_resource_manifest_properties.py  test_structured_logging_properties.py
tests/security/: test_clock_boundary.py  test_config_plugin_boundary.py  test_config_secret_boundary.py  test_domain_validation_boundary.py  test_egress_boundary.py  test_layered_privacy_boundary.py  test_log_framing_boundary.py  test_log_sink_boundary.py  test_make_isolation.py  test_makefile_safety.py  test_plugin_real_dist_info_boundary.py  test_privacy_boundary.py  test_pseudonym_key_boundary.py  test_resource_manifest_security.py  test_structured_logging_boundary.py  test_tool_artifact_validation.py  test_tool_prepare_environment.py  (+2 more)
(+92 files in other folders)
