[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milhouse"
version = "0.1.0a0"
description = "Local-first observability and feedback loops for AI-assisted engineering teams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Milhouse contributors" }]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "pydantic>=2",
  "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
milhouse = "milhouse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
