[build-system]
requires = ["setuptools>=83,<84", "wheel>=0.45,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "milhouse-observability"
dynamic = ["version"]
description = "Local-first observability and verified feedback loops for AI-assisted engineering teams"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Milhouse contributors" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "click>=8.1,<9",
  "clickhouse-connect>=0.8,<1",
  "filelock>=3.15,<4",
  "httpx>=0.27,<1",
  "mcp>=1.27,<2",
  "platformdirs>=4,<5",
  "pydantic>=2.8,<3",
  "python-dotenv>=1,<2",
]

[project.optional-dependencies]
receiver = [
  "starlette>=1.3.1,<2",
  "uvicorn[standard]>=0.30,<1",
]

[dependency-groups]
dev = [
  "build>=1.2,<2",
  "check-wheel-contents>=0.6,<1",
  "coverage[toml]>=7.6,<8",
  "cyclonedx-bom>=6,<8",
  "hypothesis>=6.120,<7",
  "mkdocs-material>=9.5,<10",
  "mypy>=1.13,<2",
  "packaging>=24,<27",
  "pip-audit>=2.7,<3",
  "pip-licenses>=5,<6",
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=5,<8",
  "pyyaml>=6,<7",
  "respx>=0.21,<1",
  "ruff>=0.8,<1",
  "setuptools>=83,<84",
  "twine>=5,<7",
  "types-pyyaml>=6,<7",
  "validate-pyproject>=0.23,<1",
  "wheel>=0.45,<1",
  "zizmor>=1.7,<2",
]

[project.scripts]
milhouse = "milhouse.cli:main"

[project.urls]
Documentation = "https://github.com/that1guy15/Milhouse-oss/tree/main/docs"
Issues = "https://github.com/that1guy15/Milhouse-oss/issues"
Repository = "https://github.com/that1guy15/Milhouse-oss"
Security = "https://github.com/that1guy15/Milhouse-oss/security"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "milhouse.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
milhouse = ["py.typed"]
"milhouse.resources" = ["*.json"]

[tool.uv]
required-version = ">=0.11.29,<0.12"
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist", "site"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
testpaths = ["tests"]
markers = [
  "contract: public and repository contract tests",
  "e2e: installed or end-to-end workflow tests",
  "integration: multi-module integration tests",
  "migration: migration foundation tests",
  "packaging: artifact and package inventory tests",
  "property: Hypothesis property tests",
  "security: security and privacy tests",
  "unit: isolated unit tests",
]

[tool.coverage.run]
branch = true
source = ["milhouse", "scripts"]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
fail_under = 0
show_missing = true
skip_covered = true

[tool.coverage.json]
output = "build/coverage.json"
show_contexts = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
files = ["src/milhouse", "scripts"]
